--- a/.gitignore
+++ b/.gitignore
@@ -28,26 +28,52 @@ local.properties
 # Eclipse Core
 .project
 
- # External tool builders
+# External tool builders
 .externalToolBuilders/
 
- # Locally stored "Eclipse launch configurations"
+# Locally stored "Eclipse launch configurations"
 *.launch
 
- # CDT-specific
+# CDT-specific
 .cproject
 
- # JDT-specific (Eclipse Java Development Tools)
+# JDT-specific (Eclipse Java Development Tools)
 .classpath
 
- # Java annotation processor (APT)
+# Java annotation processor (APT)
 .factorypath
 
- # PDT-specific
+# PDT-specific
 .buildpath
 
- # sbteclipse plugin
+# sbteclipse plugin
 .target
 
- # TeXlipse plugin
+# TeXlipse plugin
 .texlipse
+
+# OSX ignore
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
